@@ -4,15 +4,14 @@ import com.gtocore.api.gui.configurators.MultiMachineModeFancyConfigurator;
 import com.gtocore.common.data.GTORecipeTypes;
 import com.gtocore.common.data.machines.GTAEMachines;
 import com.gtocore.common.machine.trait.InternalSlotRecipeHandler;
+import com.gtocore.integration.ae.PatternContainerGroupHelper;
 
-import com.gtolib.api.ae2.MyPatternDetailsHelper;
 import com.gtolib.api.annotation.DataGeneratorScanned;
 import com.gtolib.api.annotation.language.RegisterLanguage;
 import com.gtolib.api.machine.trait.NotifiableNotConsumableFluidHandler;
 import com.gtolib.api.machine.trait.NotifiableNotConsumableItemHandler;
 import com.gtolib.api.recipe.RecipeBuilder;
 import com.gtolib.api.recipe.RecipeType;
-import com.gtolib.utils.GTOUtils;
 import com.gtolib.utils.RLUtils;
 
 import com.gregtechceu.gtceu.api.blockentity.MetaMachineBlockEntity;
@@ -20,7 +19,6 @@ import com.gregtechceu.gtceu.api.capability.IWailaDisplayProvider;
 import com.gregtechceu.gtceu.api.gui.GuiTextures;
 import com.gregtechceu.gtceu.api.gui.fancy.ConfiguratorPanel;
 import com.gregtechceu.gtceu.api.gui.fancy.TabsWidget;
-import com.gregtechceu.gtceu.api.machine.MultiblockMachineDefinition;
 import com.gregtechceu.gtceu.api.machine.fancyconfigurator.ButtonConfigurator;
 import com.gregtechceu.gtceu.api.machine.fancyconfigurator.CircuitFancyConfigurator;
 import com.gregtechceu.gtceu.api.machine.fancyconfigurator.FancyInvConfigurator;
@@ -39,7 +37,6 @@ import com.gregtechceu.gtceu.api.recipe.ingredient.FluidIngredient;
 import com.gregtechceu.gtceu.api.recipe.ingredient.ItemIngredient;
 import com.gregtechceu.gtceu.api.transfer.item.LockableItemStackHandler;
 import com.gregtechceu.gtceu.client.util.TooltipHelper;
-import com.gregtechceu.gtceu.common.data.GTItems;
 import com.gregtechceu.gtceu.common.item.IntCircuitBehaviour;
 import com.gregtechceu.gtceu.integration.jade.GTElementHelper;
 import com.gregtechceu.gtceu.utils.FormattingUtil;
@@ -50,32 +47,26 @@ import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.core.BlockPos;
 import net.minecraft.nbt.*;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.world.InteractionResult;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
 
-import appeng.api.config.Actionable;
 import appeng.api.crafting.IPatternDetails;
-import appeng.api.crafting.PatternDetailsHelper;
 import appeng.api.implementations.blockentities.PatternContainerGroup;
 import appeng.api.networking.crafting.ICraftingProvider;
 import appeng.api.stacks.*;
 import appeng.api.storage.MEStorage;
 import appeng.api.storage.StorageHelper;
-import appeng.crafting.pattern.AEProcessingPattern;
 import appeng.crafting.pattern.EncodedPatternItem;
 import appeng.crafting.pattern.ProcessingPatternItem;
 
-import com.fast.fastcollection.OpenCacheHashSet;
 import com.fast.recipesearch.IntLongMap;
 import com.gto.datasynclib.annotations.SaveToDisk;
 import com.gto.datasynclib.annotations.SyncToClient;
 import com.gto.datasynclib.annotations.SyncToServer;
 import com.gto.datasynclib.datasream.data.Data;
 import com.gto.datasynclib.listener.IntNotifiableHolder;
-import com.hepdd.gtmthings.common.item.VirtualItemProviderBehavior;
-import com.hepdd.gtmthings.data.CustomItems;
+import com.gto.fastcollection.OpenCacheHashSet;
 import com.lowdragmc.lowdraglib.gui.texture.GuiTextureGroup;
 import com.lowdragmc.lowdraglib.gui.util.ClickData;
 import com.lowdragmc.lowdraglib.gui.widget.LabelWidget;
@@ -92,7 +83,6 @@ import snownee.jade.api.fluid.JadeFluidObject;
 import snownee.jade.api.ui.IElementHelper;
 
 import java.util.*;
-import java.util.stream.Stream;
 
 import javax.annotation.ParametersAreNonnullByDefault;
 
@@ -295,59 +285,20 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
     public @Nullable IPatternDetails decodePattern(ItemStack stack, int index) {
         var pattern = super.decodePattern(stack, index);
         if (pattern == null) return null;
-        if (!caches[index] && stack.getOrCreateTag().tags.get("recipe") instanceof StringTag stringTag) {
-            var recipe = RecipeBuilder.get(RLUtils.parse(stringTag.getAsString()));
-            getInternalInventory()[index].setRecipe(recipe);
+        if (!caches[index]) {
+            MEPatternVirtualInputHelper.readRecipeTag(stack, getInternalInventory()[index]::setRecipe);
         }
         return pattern;
     }
 
     @Override
     public IPatternDetails convertPattern(IPatternDetails pattern, int index) {
-        if (pattern instanceof AEProcessingPattern processingPattern) {
-            var sparseInput = processingPattern.getSparseInputs();
-            var input = new ArrayList<GenericStack>(sparseInput.length);
-            var in = 0;
-            var slot = getInternalInventory()[index];
-            var locked = false;
-            for (var stack : sparseInput) {
-                if (stack != null && stack.what() instanceof AEItemKey what && what.getItem() == CustomItems.VIRTUAL_ITEM_PROVIDER.get() && what.getTag() != null && what.getTag().tags.containsKey("n")) {
-                    ItemStack virtualItem = VirtualItemProviderBehavior.getVirtualItem(what.getReadOnlyStack());
-                    if (virtualItem.isEmpty()) continue;
-                    if (!locked) {
-                        slot.setLock(true);
-                        locked = true;
-                    }
-                    if (GTItems.PROGRAMMED_CIRCUIT.isIn(virtualItem)) {
-                        slot.circuitInventory.storage.setStackInSlot(0, virtualItem);
-                    } else {
-                        virtualItem.setCount(Math.clamp(stack.amount(), 1, virtualItem.getMaxStackSize()));
-                        var grid = getGrid();
-                        if (grid != null && grid.getStorageService().getInventory().extract(what, 1, Actionable.SIMULATE, getActionSource()) == 1) {
-                            var storage = slot.shareInventory.storage;
-                            var inSlot = storage.getStackInSlot(in);
-                            if (!inSlot.isEmpty()) {
-                                storage.setStackInSlot(in, ItemStack.EMPTY);
-                                grid.getStorageService().getInventory().insert(AEItemKey.of(inSlot), inSlot.getCount(), Actionable.MODULATE, getActionSource());
-                            }
-                            storage.setStackInSlot(in, virtualItem);
-                            in++;
-                            if (in > storage.getSlots()) break;
-                        }
-                    }
-                    continue;
-                }
-                input.add(stack);
-            }
-            if (input.size() < sparseInput.length) {
-                if (input.isEmpty()) {
-                    return pattern;
-                }
-                var stack = PatternDetailsHelper.encodeProcessingPattern(input.toArray(new GenericStack[0]), processingPattern.getSparseOutputs());
-                return MyPatternDetailsHelper.CACHE.getCache(AEItemKey.of(stack));
-            }
-        }
-        return pattern;
+        var slot = getInternalInventory()[index];
+        return MEPatternVirtualInputHelper.convertPattern(pattern, this::getGrid, this::getActionSource,
+                slot.circuitInventory, slot.shareInventory.storage, () -> {
+                    slot.setLock(true);
+                    return true;
+                });
     }
 
     @Override
@@ -364,13 +315,11 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
         if (!isRemote()) return;
         if (configuratorField.get() == index) {
             configuratorField.set(-1);
-            configuratorField.markAsChanged();
-            syncToServer();
         } else {
             configuratorField.set(index);
-            configuratorField.markAsChanged();
-            syncToServer();
         }
+        configuratorField.markAsChanged();
+        syncToServer();
     }
 
     @Override
@@ -382,32 +331,10 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
     public PatternContainerGroup getTerminalGroup() {
         if (isFormed()) {
             IMultiController controller = getController();
-            MultiblockMachineDefinition controllerDefinition = controller.self().getDefinition();
-            GTRecipeType rt = this.recipeType;
-            MutableComponent lidComp = null;
-
-            if (rt == null)
-                rt = controller instanceof IRecipeLogicMachine rlm ? rlm.getRecipeType() : null;
-            if (rt == null || rt == GTORecipeTypes.HATCH_COMBINED) {
-                rt = null;
-                lidComp = (controller instanceof IRecipeLogicMachine rlm ? Stream.of(rlm.getAvailableRecipeTypes()) : Stream.<GTRecipeType>empty())
-                        .map(r -> Component.translatable("gtceu." + r.registryName.getPath()))
-                        .collect(GTOUtils.joiningComponent(Component.literal("/")));
-
-            }
-
-            String lid = rt != null ? rt.registryName.toLanguageKey() : controllerDefinition.getDescriptionId();
-
-            if (!getCustomName().isEmpty()) {
-                return new PatternContainerGroup(AEItemKey.of(controllerDefinition.asStack()), Component.literal(getCustomName()), Collections.emptyList());
-            } else {
-                ItemStack circuitStack = circuitInventorySimulated.storage.getStackInSlot(0);
-                int circuitConfiguration = circuitStack.isEmpty() ? -1 : IntCircuitBehaviour.getCircuitConfiguration(circuitStack);
-                MutableComponent groupName = lidComp != null ? lidComp : Component.translatable(lid);
-                if (circuitConfiguration != -1) groupName = groupName.append(" - " + circuitConfiguration);
-                return new PatternContainerGroup(AEItemKey.of(controllerDefinition.asStack()), groupName,
-                        lidComp != null ? List.of(Component.translatable(lid)) : Collections.emptyList());
-            }
+            Collection<GTRecipeType> availableRecipeTypes = controller instanceof IRecipeLogicMachine recipeMachine ?
+                    Arrays.asList(recipeMachine.getAvailableRecipeTypes()) : List.of();
+            return PatternContainerGroupHelper.forPatternBuffer(
+                    controller.self(), this, getCustomName(), recipeType, availableRecipeTypes);
         } else {
             if (!getCustomName().isEmpty()) {
                 return new PatternContainerGroup(AEItemKey.of(GTAEMachines.ME_PATTERN_BUFFER.asItem()), Component.literal(getCustomName()), Collections.emptyList());
@@ -415,6 +342,21 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
                 return new PatternContainerGroup(AEItemKey.of(GTAEMachines.ME_PATTERN_BUFFER.asItem()), GTAEMachines.ME_PATTERN_BUFFER.get().getDefinition().asItem().getDescription(), Collections.emptyList());
             }
         }
+    }
+
+    @Override
+    public Component gto$getTerminalGroupSearchName() {
+        if (!isFormed()) {
+            return getTerminalGroup().name();
+        }
+        if (!getCustomName().isEmpty() && !getCustomName().startsWith("+")) {
+            return Component.literal(getCustomName());
+        }
+        IMultiController controller = getController();
+        Collection<GTRecipeType> availableRecipeTypes = controller instanceof IRecipeLogicMachine recipeMachine ?
+                Arrays.asList(recipeMachine.getAvailableRecipeTypes()) : List.of();
+        String extraSuffix = getCustomName().startsWith("+") ? getCustomName().substring(1).strip() : "";
+        return PatternContainerGroupHelper.getSearchName(controller.self(), extraSuffix, recipeType, availableRecipeTypes);
     }
 
     @Override
@@ -501,12 +443,12 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
         var items = new AEKeyMap<AEItemKey>();
         var fluids = new AEKeyMap<AEFluidKey>();
         for (InternalSlot slot : buffer.getInternalInventory()) {
-            slot.itemInventory.reference2LongEntrySet().fastForEach(e -> items.addTo(e.getKey(), e.getLongValue()));
-            slot.fluidInventory.reference2LongEntrySet().fastForEach(e -> fluids.addTo(e.getKey(), e.getLongValue()));
+            slot.itemInventory.fastForEach(items::insert);
+            slot.fluidInventory.fastForEach(fluids::insert);
         }
 
         ListTag itemsTag = new ListTag();
-        for (var entry : items.reference2LongEntrySet()) {
+        for (var entry : items) {
             var ct = entry.getKey().toTag();
             ct.putLong("real", entry.getLongValue());
             itemsTag.add(ct);
@@ -514,7 +456,7 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
         if (!itemsTag.isEmpty()) data.put("items", itemsTag);
 
         ListTag fluidsTag = new ListTag();
-        for (var entry : fluids.reference2LongEntrySet()) {
+        for (var entry : fluids) {
             var ct = entry.getKey().toTag();
             ct.putLong("real", entry.getLongValue());
             fluidsTag.add(ct);
@@ -619,20 +561,12 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
             return itemInventory.isEmpty() && fluidInventory.isEmpty();
         }
 
-        public boolean isItemEmpty() {
-            return itemInventory.isEmpty();
-        }
-
-        public boolean isFluidEmpty() {
-            return fluidInventory.isEmpty();
-        }
-
         private void refund() {
             var network = machine.getMainNode().getGrid();
             if (network != null) {
                 MEStorage networkInv = network.getStorageService().getInventory();
                 var energy = network.getEnergyService();
-                for (var it = itemInventory.reference2LongEntrySet().fastIterator(); it.hasNext();) {
+                for (var it = itemInventory.iterator(); it.hasNext();) {
                     var entry = it.next();
 
                     var count = entry.getLongValue();
@@ -649,7 +583,7 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
                         else entry.setValue(count);
                     }
                 }
-                for (var it = fluidInventory.reference2LongEntrySet().fastIterator(); it.hasNext();) {
+                for (var it = fluidInventory.iterator(); it.hasNext();) {
                     var entry = it.next();
                     var amount = entry.getLongValue();
                     if (amount == 0) {
@@ -690,7 +624,7 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
                     it.remove();
                     continue;
                 }
-                for (var it2 = itemInventory.reference2LongEntrySet().fastIterator(); it2.hasNext();) {
+                for (var it2 = itemInventory.iterator(); it2.hasNext();) {
                     var entry = it2.next();
                     if (!ingredient.inner.testAeKay(entry.getKey())) continue;
                     var count = entry.getLongValue();
@@ -724,7 +658,7 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
                     it.remove();
                     continue;
                 }
-                for (var it2 = fluidInventory.reference2LongEntrySet().fastIterator(); it2.hasNext();) {
+                for (var it2 = fluidInventory.iterator(); it2.hasNext();) {
                     var entry = it2.next();
                     if (!ingredient.inner.testAeKay(entry.getKey())) continue;
                     var count = entry.getLongValue();
@@ -757,16 +691,14 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
                 tag.putByteArray("recipe", GTRecipeDefinition.DATA_CODEC.encode(recipe).writeToBytes());
             }
             ListTag itemsTag = new ListTag();
-            for (var it = itemInventory.reference2LongEntrySet().fastIterator(); it.hasNext();) {
-                var entry = it.next();
+            for (var entry : itemInventory) {
                 var ct = entry.getKey().toTag();
                 ct.putLong("real", entry.getLongValue());
                 itemsTag.add(ct);
             }
             if (!itemsTag.isEmpty()) tag.put("inventory", itemsTag);
             ListTag fluidsTag = new ListTag();
-            for (var it = fluidInventory.reference2LongEntrySet().fastIterator(); it.hasNext();) {
-                var entry = it.next();
+            for (var entry : fluidInventory) {
                 var ct = entry.getKey().toTag();
                 ct.putLong("real", entry.getLongValue());
                 fluidsTag.add(ct);
@@ -801,7 +733,7 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
                 if (stack == null) continue;
                 var amount = ct.getLong("real");
                 if (amount > 0) {
-                    itemInventory.put(stack, amount);
+                    itemInventory.set(stack, amount);
                 }
             }
             ListTag fluids = tag.getList("fluidInventory", Tag.TAG_COMPOUND);
@@ -811,7 +743,7 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
                 if (stack == null) continue;
                 var amount = ct.getLong("real");
                 if (amount > 0) {
-                    fluidInventory.put(stack, amount);
+                    fluidInventory.set(stack, amount);
                 }
             }
             if (tag.tags.get("inv") instanceof CompoundTag inv) {
@@ -837,9 +769,9 @@ public abstract class MEPatternBufferPartMachine extends MEPatternPartMachineKt<
         public void pushInput(AEKey key, long amount) {
             if (amount < 1) return;
             if (key instanceof AEItemKey itemKey) {
-                slot.itemInventory.addTo(itemKey, amount);
+                slot.itemInventory.insert(itemKey, amount);
             } else if (key instanceof AEFluidKey fluidKey) {
-                slot.fluidInventory.addTo(fluidKey, amount);
+                slot.fluidInventory.insert(fluidKey, amount);
             }
         }
     }
