@@ -156,7 +156,7 @@ public abstract class MufflerPartMachineMixin extends WorkableTieredPartMachine 
 
     @Override
     public boolean hasModifyRecipeMethod() {
-        return false;
+        return true;
     }
 
     @Override
@@ -166,13 +166,13 @@ public abstract class MufflerPartMachineMixin extends WorkableTieredPartMachine 
 
     @Override
     public boolean hasBeforeWorkingMethod() {
-        return true;
+        return false;
     }
 
     @Override
     public void onLoad() {
         super.onLoad();
-        gto$chanceOfNotProduceAsh = Math.min(Math.max(gto$chanceOfNotProduceAsh, 0), getTier() * 10);
+        gto$chanceOfNotProduceAsh = Math.clamp(gto$chanceOfNotProduceAsh, 0, getTier() * 10);
         if (isRemote()) {
             gto$subParticle();
         }
